# tasknpoint

./: pyproject.toml
docs/source/: changelog.rst
docs/source/training/: rsl_rl.rst
imitation_data/: throw.csv  throw_no_waist.csv
notebooks/: create_new_task.ipynb
src/mjlab/asset_zoo/robots/unitree_g1/: g1_constants.py
src/mjlab/asset_zoo/robots/unitree_g1/xmls/: g1.xml  g1_batting.xml
src/mjlab/envs/: manager_based_rl_env.py
src/mjlab/envs/mdp/: curriculums.py
src/mjlab/rl/: config.py  runner.py
src/mjlab/scripts/: play.py  train.py
src/mjlab/tasks/estimation/: __init__.py  estimation_env_cfg.py
src/mjlab/tasks/estimation/config/g1/: __init__.py  env_cfgs.py  rl_cfg.py
src/mjlab/tasks/estimation/mdp/: __init__.py  ball_command.py  commands.py  low_level_tracker.py  observations.py  rewards.py  trigger_action.py
src/mjlab/tasks/tracking/: tracking_env_cfg.py
src/mjlab/tasks/tracking/config/g1/: __init__.py  env_cfgs.py
src/mjlab/tasks/tracking/mdp/: commands.py  observations.py  rewards.py
src/mjlab/tasks/tracking/rl/: runner.py
src/mjlab/tasks/velocity/: velocity_env_cfg.py
src/mjlab/viewer/native/: viewer.py
tests/: test_runner.py  test_tracking_task.py
